# Cider-Bot

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  deploy-commands.js  dockerfile  environment.d.ts  faq.json  index.js  local.js  nodemon.json  package.json  permissions.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: docker-image.yml
commands/: afterdark.js  branchbuilds.js  cleanchannel.js  cleanimages.js  createpull.js  discordrpc.js  donate.js  faqupdate.js  help.js  keefe.js  macos.js  marin.js  modcmds.js  newstable.js  nightly.js  nowplaying.js  pause.js  ping.js  play.js  queue.js  restrictions.js  resume.js  sauceme.js  shuffle.js  skip.js  updatefaq.js  verify.js
events/: messageCreate.js  messageReactionAdd.js  presenceUpdate.js
integrations/: express.js  mongo.js
interactions/: branch.js  queuePages.js
replies/: atmos.json  greyedout.json  lyrics.json  slow.json
src/: Master.ts  cider.d.ts  index.js  index.ts  local.js  main.rs  vpath.rs
src/Commands/: BranchBuilds.ts  Donate.ts  FAQ.ts  FAQupdate.ts  Marin.ts  SauceMe.ts  Verify-Test.ts
src/Events/: InteractionCreate.ts  MessageCreate.ts  PresenceUpdate.ts  Ready.ts
src/Integrations/: Mongo.ts
src/JSON/: FAQ.json
src/Replies/: atmos.json  greyedout.json  lossless.json  lyrics.json  slow.json
src/Structures/: AntiCrash.ts  BotClient.ts  BotConfig.ts  Local.ts
src/Typings/: Command.ts  Config.ts  Event.ts  RunOptions.ts
src/api/: mod.rs
src/commands/: about.rs  branchbuilds.js  deletetimezone.rs  discordrpc.js  faqupdate.js  lyrics.js  mod.rs  modcmds.js  newstable.js  nowplaying.js  play.js  player.rs  playnext.js  resume.js  sauceme.js  serverinfo.js  settimezone.rs  shuffle.js  time.rs  timezone.rs  wipe.js
src/commands/admin/: cleanchannel.js  faqupdate.js  modcmds.js  wipe.js
src/commands/cider/: branchbuilds.js  branchbuilds.ts  newstable.js
src/commands/entertainment/: afterdark.js  keefe.js  marin.js  sauceme.js  streamevent.js
src/commands/general/: invite.js  invite.ts  ping.js  ping.ts  serverinfo.ts  settimezone.js  settimezone.ts  time.js  time.ts
src/commands/music/: autoplay.ts  lyrics.js  lyrics.ts  nowplaying.js  pause.js  pause.ts  play.js  play.ts  playnext.js  playnext.ts  previous.ts  queue.js  queue.ts  resume.js  resume.ts  shuffle.js  shuffle.ts  skip-to.ts  skip.js  skip.ts  stop.js  stop.ts
src/commands/musickit/: artwork.js  artwork.ts  info.js  info.ts
src/commands/support/: approve.js  discordrpc.js  donate.js  help.js  help.ts  restrictions.js  restrictions.ts  support.js  support.ts  verify.js  verify.ts
src/data/: headers.js  leaderboard.json  roles.js
src/events/: debug.ts  guildCreate.ts  guildMemberAdd.js  interaction.ts  interactionCreate.js  messageCreate.js  messageReactionAdd.js  presenceUpdate.js  ready.js  ready.ts
src/integrations/: discord-player.ts  express.js  firebase.js  firebase.ts  geniusLyrics.js  mongo.js  musickitAPI.js  musickitAPI.ts  serviceStatus.js  serviceStatus.ts
src/interactions/: branch.js  branch.ts  queuePages.js
src/models/: mod.rs
src/replies/: atmos.json  lossless.json  lyrics.json
src/server/: express.js
src/update/: mod.rs
