[package]
name = "ciderbot"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["freehelpdesk <freehelpdesk@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
vergen = { version = "8.2.4", features = ["build", "cargo", "git", "gitoxide", "rustc", "si"] }

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
chrono-tz = { version = "0.8.3", features = ["serde"] }
enum-iterator = "1.4.1"
lazy_static = "1.4.0"
log = { version = "0.4.20", features = ["serde"] }
poise = "0.5.5"
priority-queue = { version = "1.3.2", features = ["serde"] }
reqwest = { version = "0.11.18", features = ["json", "serde_json"] }
rubato = "0.14.1"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
songbird = { git = "https://github.com/serenity-rs/songbird", branch = "current", features = ["serenity", "tokio"] }
surrealdb = "1.0.0-beta.9"
# surrealdb = "1.0.0-beta.9"
thiserror = "1.0.47"
tokio = { version = "1.31.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["serde", "serde_json", "env-filter"] }
yokai = {path = "/Users/user/Documents/Projects New/pokimanefartcompilation4khdrdolbyatmosdolbyvisionimaxsurround/yokai"}
# yokai_provider = {git = "https://github.com/ciderapp/pokimanefartcompilation4khdrdolbyatmosdolbyvisionimaxsurround", branch = "rewrite", package = "provider"}

yokai_apple = { path = "/Users/user/Documents/Projects New/pokimanefartcompilation4khdrdolbyatmosdolbyvisionimaxsurround/provider/apple" }
